<resources>
    <string name="app_name">HikingApp</string>
    <string name="map_button_string">Map</string>
    <string name="plans_button_string">Hiking Plans</string>
    <string name="settings_button_string">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_map">Map</string>
    <string name="title_plans">Plans</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_q">Don\'t have an account?</string>
    <string name="go_back">Go back</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_save">Save</string>
    <string name="action_create_plan">Create new plan</string>
    <string name="action_create_emergency_contact">Create emergency contact</string>
    <string name="action_set_default">Set Default</string>
    <string name="action_view_emergency_contact">View all</string>
    <string name="action_view_active_plan">View active plan</string>
    <string name="action_activate_plan">Activate plan</string>
    <string name="action_deactivate_plan">Deactivate plan</string>
    <string name="action_edit">Edit</string>
    <string name="action_edit_username">Edit username</string>
    <string name="action_delete_account">Delete account</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="action_view">View</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_open_map">Open Map</string>
    <string name="action_check_in">Check in</string>
    <string name="action_add_pin">Add pin</string>
    <string name="action_confirm">Confirm</string>
    <string name="editing_plan">Editing plan: </string>
    <string name="creating_plan">Creating plan: </string>
    <string name="active_plan_warning">Check in by:</string>
    <string name="time_remaining">Time remaining:</string>
    <string name="active_plan">Active plan:</string>
    <string name="plan_name">Plan name</string>
    <string name="plan_startLatitude">Start latitude</string>
    <string name="plan_startLongitude">Start longitude</string>
    <string name="plan_endLatitude">End latitude</string>
    <string name="plan_endLongitude">End longitude</string>
    <string name="plan_startTime">Start time</string>
    <string name="plan_endTime">End time</string>
    <string name="plan_startDate">Start date</string>
    <string name="plan_endDate">End date</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_phone_numer">Phone Number</string>
    <string name="contact_message">Message</string>
    <string name="account_management">Account Management</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- MAPBOX PUBLIC TOKEN -->
    <string name="mapbox_access_token">pk.eyJ1IjoiZXZlcnM3MyIsImEiOiJja212aW90dmQwNWhmMnVwYXRkZnU0cWFrIn0.9EYVdGhtWnEHV2acXgK2yA</string>
</resources>