<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.hikingapp.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_plans" />

    <fragment
        android:id="@+id/navigation_plans"
        android:name="com.example.hikingapp.ui.plans.PlansFragment"
        android:label="@string/title_plans"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.hikingapp.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>