<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreenActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_home" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_half"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".5"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".5"
        app:layout_constraintTop_toBottomOf="@id/top_half">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/map_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_button_string"
                android:layout_margin="5dp"
                android:onClick="onMapButtonClick"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/plans_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plans_button_string"
                android:layout_margin="5dp"
                android:onClick="onPlansButtonClick"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/settings_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_button_string"
                android:layout_margin="5dp"
                android:onClick="onSettingsButtonClick"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:layout_margin="5dp"
                android:onClick="onLoginButtonClick"/>

            <androidx.appcompat.widget.AppCompatButton
                android:visibility="gone"
                android:id="@+id/logout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_out"
                android:layout_margin="5dp"
                android:onClick="onLogoutButtonClick" />


        </androidx.appcompat.widget.LinearLayoutCompat>



    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>